--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "express": "^4.18.2",
+    "firebase": "^9.14.0",
+    "mongoose": "^6.7.2",
     "next": "13.0.3",
+    "nodemon": "^2.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
